# terminal-blog

./: .env  .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/commands/: index.ts
frontend/src/components/: CaptchaLabel.vue  CommandHint.vue  HintContainer.vue  PathDisplay.vue
frontend/src/styles/: terminal.css
src/: logger.rs  main.rs
src/auth/: jwt.rs  manager.rs  middleware.rs  mod.rs  types.rs
src/captcha/: manager.rs  mod.rs  types.rs
src/command/: cmd_cd.rs  cmd_clear.rs  cmd_help.rs  cmd_id.rs  cmd_login.rs  cmd_logout.rs  cmd_ls.rs  cmd_mkdir.rs  cmd_profile.rs  cmd_pwd.rs  cmd_register.rs  mod.rs
src/db/: mod.rs
src/vfs/: manager.rs  mod.rs  model.rs  path_normalizer.rs  permission.rs
src/vfs/storage/: backend.rs  mod.rs  postgres_backend.rs
static/css/: style.css
static/js/: main.js
templates/: index.html
