[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9.2"
regex = "1.10"
mime_guess = "2.0"
rand = "0.8"
